--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,7 @@ body {
   margin: 0;
   padding: 0;
 
-  font-family: "Cuprum", Arial, sans-serif;
-  font-family: "PT Sans", Arial, sans-serif;
+  font-family: "Cuprum", "PT Sans", Arial, sans-serif;
   font-size: 14px;
   line-height: 24px;
   text-align: left;
@@ -16,6 +15,7 @@ a {
 } /* удаляем подчеркивание ссылок */
 
 .header-top {
+  font-family: "Cuprum", Arial, sans-serif;
   font-size: 17px;
   line-height: 18px;
   background-color: #293449;
@@ -71,7 +71,7 @@ a {
 }
 
 .header-middle {
-  text-align: left;
+  font-family: "Cuprum", Arial, sans-serif;
   background-color: #f2f6f8;
 }
 
@@ -141,23 +141,23 @@ a {
   list-style: none;
 }
 
-.first-features li:nth-child(1){
+.materials {
   background-color: #ffbf47;
 } /* цветовые блоки */
 
-.first-features li:nth-child(2){
+.instruments {
   background-color: #3bbce3;
 }
 
-.first-features li:nth-child(3){
+.tech {
   background-color: #dc91d8;
 }
 
-.last-features li:nth-child(1){
+.sale{
   background-color: #8ed78f;
 }
 
-.last-features li:nth-child(2){
+.delivery{
   background-color: #ffc047;
 }
 
@@ -167,7 +167,7 @@ a {
   font-weight: bold;
 }
 
-.feature-item a{
+.feature-item a {
   font-size: 14px;
   line-height: 18px;
   text-align: center;
@@ -199,7 +199,6 @@ a {
 .slide a {
   font-size: 14px;
   line-height: 18px;
-  text-align: center;
   vertical-align: middle;
   text-transform: uppercase;
   text-align: center;
@@ -234,6 +233,7 @@ a {
 }
 
 .catalog-item {
+  font-family: "PT Sans", Arial, sans-serif;
   font-weight: bold;
   border: 1px solid #eaeaea;
 }
@@ -262,7 +262,6 @@ a {
 .item-button-bookmark {
   font-size: 14px;
   line-height: 18px;
-  font-weight: normal;
   text-align: center;
   text-transform: uppercase;
 }
@@ -312,19 +311,12 @@ a {
 .services,
 .info-about,
 .info-contacts {
-  font-size: 14px;
-  line-height: 24px;
-  font-weight: normal;
-  text-align: left;
   color: #000000;
 }
 
-.services-header h2,
-.info-about h2,
-.info-contacts h2{
+.header-middle {
   font-size: 30px;
   line-height: 30px;
-  font-weight: normal;
   text-transform: uppercase;
 }
 
@@ -351,7 +343,6 @@ a {
   color: #32425c;
   font-size: 36px;
   line-height: 36px;
-  font-weight: normal;
   text-transform: uppercase;
 }
 
@@ -360,7 +351,6 @@ a {
   font-size: 14px;
   line-height: 18px;
   text-align: center;
-  font-weight: normal;
   text-transform: uppercase;
   color: #ffffff;
   background-color: #ee3643;
@@ -369,15 +359,11 @@ a {
 .info-about ul {
   font-size: 18px;
   line-height: 20px;
-  text-align: left;
-  font-weight: normal;
 }
 
 .modal-login {
   font-size: 18px;
   line-height: 18px;
-  text-align: left;
-  font-weight: normal;
   color: #000000;
   background-color: #ffffff;
   border-top: 7px solid #ff5357;
@@ -416,17 +402,16 @@ a {
 .footer-middle {
   font-size: 18px;
   line-height: 24px;
-  text-align: left;
   color: #ffffff;
   background-color: #32425c;
 }
 
-.footer-top .container ul,
+.footer-top  ul,
 .footer-middle ul {
   list-style: none;
 }
 
-.footer-top .container a {
+.footer-top a {
   color: #ffffff;
 }
 
@@ -438,12 +423,12 @@ a {
   color: #ffd180;
 }
 
-.footer-top .container a:hover,
+.footer-top a:hover,
 .footer-middle a:hover {
   text-decoration: underline;
 }
 
-.footer-top .container a:focus,
+.footer-top a:focus,
 .footer-middle a:focus {
   opacity: 0.5;
   text-decoration: none;
@@ -452,8 +437,6 @@ a {
 .footer-bottom {
   font-size: 16px;
   line-height: 18px;
-  text-align: left;
-  font-weight: normal;
   color: #ffffff;
   background-color: #293449;
 }
@@ -472,19 +455,16 @@ a {
   background-color: #ee3643;
 }
 
-.feedback a,
-.copyright a {
+.footer-link {
   color: #ffd180;
 }
 
-.feedback a:hover,
-.copyright a:hover {
+.footer-link:hover {
   text-decoration: underline;
   color: #ffd180;
 }
 
-.feedback a:focus,
-.copyright a:focus {
+.footer-link:focus {
   text-decoration: none;
   color: #ee3643;
 }
@@ -537,8 +517,6 @@ a {
 .breadcrumbs {
   font-size: 13px;
   line-height: 18px;
-  font-weight: normal;
-  text-align: left;
   list-style: none;
   color: #000000;
 }
@@ -550,7 +528,6 @@ a {
 .page-title {
   font-size: 30px;
   line-height: 30px;
-  text-align: left;
   text-transform: uppercase;
   color: #32425c;
   background-color: #f2f6f8;
@@ -564,8 +541,6 @@ a {
 .filters h3 {
   font-size: 13px;
   line-height: 18px;
-  font-weight: normal;
-  text-align: left;
   text-transform: uppercase;
   background-color: #f7f3ec;
 }
@@ -574,7 +549,6 @@ a {
   font-size: 17px;
   line-height: 30px;
   font-weight: bold;
-  text-align: left;
   text-transform: uppercase;
 }
 
@@ -587,15 +561,12 @@ a {
 .filter-option {
   font-size: 15px;
   line-height: 20px;
-  font-weight: normal;
-  text-align: left;
   text-transform: uppercase;
 }
 
 .filter-button {
   font-size: 13px;
   line-height: 18px;
-  font-weight: normal;
   text-align: center;
   background-color: #ffffff;
 }
@@ -603,8 +574,6 @@ a {
 .sorting {
   font-size: 13px;
   line-height: 18px;
-  font-weight: normal;
-  text-align: left;
   text-transform: uppercase;
   color: #000000;
   background-color: #f7f3ec;
@@ -613,14 +582,11 @@ a {
 .sorting h3 {
   font-size: 14px;
   line-height: 18px;
-  font-weight: normal;
-  text-align: left;
 }
 
 .sorting-options {
   font-size: 14px;
   line-height: 18px;
-  font-weight: normal;
   color: rgba(0, 0, 0, 0.3);
 }
 
@@ -628,26 +594,18 @@ a {
   color: rgba(0, 0, 0, 0.3);
 }
 
-.sorting-option-price,
-.sorting-option-type,
-.sorting-option-function  {
+.sorting-option {
   border-bottom: 1px dotted #ee3643; /*подчеркивание точками*/
 }
 
-.sorting-option-price:hover,
-.sorting-option-type:hover,
-.sorting-option-function:hover,
-.option-up-arrow:hover,
-.option-down-arrow:hover {
+.sorting-option:hover,
+.option-arrow:hover {
   color: #000000;
   border-bottom: 1px solid #ee3643 /*подчеркивание линией*/
 }
 
-.sorting-option-price:focus,
-.sorting-option-type:focus,
-.sorting-option-function:focus,
-.option-up-arrow:focus,
-.option-down-arrow:focus {
+.sorting-option:focus,
+.option-arrow:focus {
   border-bottom: inherit;
   color: #ee3643;
 }
@@ -656,7 +614,6 @@ a {
   font-size: 13px;
   line-height: 18px;
   text-align: center;
-  font-weight: normal;
   color: #000000;
 }
 
@@ -689,8 +646,6 @@ a {
   color: #000000;
   font-size: 30px;
   line-height: 30px;
-  text-align: left;
-  font-weight: normal;
   text-transform: uppercase;
 }
 
@@ -698,15 +653,12 @@ a {
   color: #000000;
   font-size: 13px;
   line-height: 24px;
-  text-align: left;
-  font-weight: normal;
 }
 
 .cart-notification {
   font-size: 30px;
   line-height: 30px;
   text-align: center;
-  font-weight: normal;
   color: #000000;
   background-color: #ffffff;
   border-top: 7px solid #ff5357;
