--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
 
-  font-family: "Cuprum", "PT Sans", Arial, sans-serif;
+  font-family: "Cuprum", Arial, sans-serif;
   font-size: 14px;
   line-height: 24px;
   text-align: left;
@@ -15,7 +15,6 @@ a {
 } /* удаляем подчеркивание ссылок */
 
 .header-top {
-  font-family: "Cuprum", Arial, sans-serif;
   font-size: 17px;
   line-height: 18px;
   background-color: #293449;
@@ -71,7 +70,6 @@ a {
 }
 
 .header-middle {
-  font-family: "Cuprum", Arial, sans-serif;
   background-color: #f2f6f8;
 }
 
@@ -308,16 +306,21 @@ a {
   box-shadow: 0px 4px 10px 0 rgba(41, 52, 73, 0.5);
 }
 
-.services,
-.info-about,
-.info-contacts {
+.middle-info,
+.slides {
   color: #000000;
 }
 
-.header-middle {
+.middle-info h2 {
   font-size: 30px;
   line-height: 30px;
   text-transform: uppercase;
+  font-weight: normal;
+}
+
+.middle-info p,
+.slides p {
+  font-family: "PT Sans", Arial, sans-serif;
 }
 
 .services {
@@ -515,6 +518,7 @@ a {
 }
 
 .breadcrumbs {
+  font-family: "PT Sans", Arial, sans-serif;
   font-size: 13px;
   line-height: 18px;
   list-style: none;
@@ -534,6 +538,7 @@ a {
 }
 
 .filters {
+  font-family: "PT Sans", Arial, sans-serif;
   color: #000000;
   background-color: #ffffff;
 }
@@ -611,6 +616,7 @@ a {
 }
 
 .pagination {
+  font-family: "PT Sans", Arial, sans-serif;
   font-size: 13px;
   line-height: 18px;
   text-align: center;
@@ -650,6 +656,7 @@ a {
 }
 
 .product-information p {
+  font-family: "PT Sans", Arial, sans-serif;
   color: #000000;
   font-size: 13px;
   line-height: 24px;
